# lowhum

./: .gitignore  .python-version  LowHum.icns  README.md  justfile  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: pyproject.toml
src/lowhum/: __init__.py  app.py  audio.py  cli.py  generator.py  icons.py
