[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lowhum"
version = "1.0.0"
description = "LowHum — deep brown noise for focus"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["brown-noise", "focus", "ambient", "macos", "menu-bar", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "rumps>=0.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "Pillow>=10.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
lhm = "lowhum.cli:app"
lowhum = "lowhum.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/lowhum"
Repository = "https://github.com/yourusername/lowhum"
Issues = "https://github.com/yourusername/lowhum/issues"

[tool.hatch.build.targets.wheel]
packages = ["lowhum"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
